examples/test/testpolicy8719.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8719
  namespace: namespace190
spec:
  podSelector:
    matchLabels:
      key8: value11
      key30: value12
      key6: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value20
          key7: value39
      podSelector:
        matchLabels:
          key5: value45
